# jmlc-task

./: .gitignore  README.md  pyproject.toml
app/: main.py  model.py  schemas.py  segmenter.py
data/: dataset_1937770_3.txt
models/: bilstm_ru_stream_no_oscar.pth  char2id_stream_no_oscar.json
notebooks/: Avito_case_final.ipynb
tests/: test_api.py  test_segmenter.py
